# com-croftsoft-core

./: Cargo.toml  LICENSE.txt  README.md  rustfmt.toml
src/: lib.rs
src/ai/: mod.rs
src/ai/astar/: mod.rs
src/ai/astar/constants/: mod.rs  test.rs
src/ai/astar/functions/: mod.rs  test.rs
src/ai/astar/methods/: mod.rs  test.rs
src/ai/astar/operations/: mod.rs  test.rs
src/ai/astar/structures/: mod.rs
src/ai/astar/trait_imps/: mod.rs  test.rs
src/ai/astar/traits/: mod.rs
src/ai/astar/types/: mod.rs
src/math/: mod.rs
src/math/axis/: mod.rs  test.rs
src/math/finance_lib/: mod.rs
src/math/geom/: mod.rs
src/math/geom/circle/: mod.rs
src/math/geom/functions/: mod.rs
src/math/geom/methods/: mod.rs  test.rs
src/math/geom/point_2dd/: mod.rs  test.rs
src/math/geom/point_xy/: mod.rs
src/math/geom/rectangle/: mod.rs  test.rs
src/math/geom/structures/: mod.rs
src/math/geom/trait_imps/: mod.rs  test.rs
src/math/geom/traits/: mod.rs
src/math/math_constants/: mod.rs
src/math/math_lib/: mod.rs
src/math/matrix/: mod.rs
src/math/matrix/functions/: mod.rs  test.rs
src/math/matrix/methods/: mod.rs  test.rs
src/math/matrix/operations/: mod.rs  test.rs
src/math/matrix/structures/: mod.rs
src/math/matrix/tests/: mod.rs
src/math/matrix/trait_imps/: mod.rs  test.rs
src/math/quat/: mod.rs  test.rs
src/role/: mod.rs  test.rs
src/security/: mod.rs
src/security/operations/: mod.rs  test.rs
src/security/structures/: mod.rs
tests/: ai-astar-test.rs  test-ai-astar.rs
