[package]
name = "com-croftsoft-core"
version = "0.10.0"
authors = ["David Wallace Croft <david@croftsoft.com>"]
categories = ["mathematics"]
description = "A core library of highly reusable code"
edition = "2021"
homepage = "https://www.croftsoft.com/"
keywords = ["math"]
license = "MIT"
publish = true
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft-core"

[dependencies]
# No dependencies
