[package]
authors = ["David Wallace Croft <david@CroftSoft.com>"]
categories = ["mathematics"]
description = "A core library of highly reusable code"
edition = "2021"
homepage = "https://www.croftsoft.com/"
keywords = ["math"]
license = "MIT"
name = "com-croftsoft-core"
publish = false
readme = "README.md"
repository = "https://github.com/david-wallace-croft/com-croftsoft-core"
rust-version = "1.65"
version = "0.15.0-SNAPSHOT"

[dependencies]
# No dependencies
